# system_notification

./: .coveragerc  .pre-commit-config.yaml  README.md  app.py  conftest.py  package-lock.json  package.json  pyproject.toml  pytest.ini  serverless.yaml
system_notification/application/: __init__.py
system_notification/application/send_notification_usecase/: __init__.py  send_notification_usecase.py
system_notification/config/: config.py
system_notification/domain/: __init__.py  base_notification.py  notification_factory_caller.py  notification_target.py
system_notification/domain/decorators/: __init__.py  jwt_auth_controller_decorator.py
system_notification/domain/exceptions/: notification_error.py
system_notification/domain/notifications/: __init__.py  base_notification.py  notification_target.py  slack_notification.py
system_notification/domain/protocols/: __init__.py  controller_protocol.py  factory_caller_protocol.py  http_client_protocol.py  jwt_adapter_protocol.py  notification.py  notification_factory_protocol.py  notification_protocol.py  notification_sender.py
system_notification/infra/jwt/: __init__.py  jose_jwt_adapter.py
system_notification/infra/notification_handlers/: __init__.py  slack_notification_handler.py
tests/: test_ensure_test_are_running.py
tests/application/: test_send_notification_usecase.py
tests/domain/: test_base_notification.py  test_factory_caller.py  test_notification_target.py
tests/domain/decorators/: test_auth_decorator.py
tests/domain/notifications/: test_base_notification.py  test_notification_target.py  (+1 more)
(+17 files in other folders)
